--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "fossasia-summit-guide",
+  "version": "0.1.0",
+  "license": "ISC",
   "devDependencies": {
     "vitepress": "^2.0.0-alpha.15",
     "vue": "^3.5.26"
